--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,14 @@ lbl-toggle {
     /* border-radius: 7px; */
     transition: all 0.25s ease-out;
 }
+full-bg-video {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
