--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'Gabarito';
+    src: url('/Gabarito/OpenSans-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+
 body {
   
     top: 0;
@@ -22,8 +28,7 @@ h1 {
 }
 
 p {
-  font-family: Gabarito;
-  font-size: 20px;
+  
 }
 lbl-toggle {
     /* background-image: linear-gradient(-30deg, transparent 20%, yellow); */
