--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Gabarito';
-    src: url('/Gabarito/OpenSans-ExtraBold.ttf') format('truetype');
+    src: url('/Gabarito/VariableFont_wght.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 
@@ -23,8 +23,10 @@ body {
 }
 
 h1 {
-  color: linen;
-  text-align: left;
+  margin: 0;
+  padding: 20px 0;
+  color: #00539f;
+  text-shadow: 3px 3px 1px black;
 }
 
 p {
