--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,56 @@ div {
     border-radius: 50px;
     /* border: 1px solid whitesmoke; */
 }
+@font-face {
+    font-family: 'Gabarito';
+    src: url('/Gabarito/VariableFont_wght.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+
+body {
+  
+    top: 0;
+    left: 0;
+    height: auto;
+    width: auto;
+    position: sticky;
+    /* display: flex; */
+    display: flow-root;
+    /* justify-content: flex-end; */
+    /* background-color: #FDC835; */
+    /* background-color: lightgrey; */
+    /* background-color: silver; */
+    background-color: lightblue;
+    padding: 2vw;
+    z-index: 100;
+}
+
+h1 {
+  margin: 0;
+  padding: 20px 0;
+  color: #00539f;
+  text-shadow: 3px 3px 1px black;
+}
+
+p {
+  
+}
+lbl-toggle {
+    /* background-image: linear-gradient(-30deg, transparent 20%, yellow); */
+    display: block;
+    padding: 0;
+    cursor: pointer;
+    /* border-radius: 7px; */
+    transition: all 0.25s ease-out;
+}
+full-bg-video {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
