--- a/css/style.css
+++ b/css/style.css
@@ -961,6 +961,291 @@ input[type="checkbox"] {
     margin-bottom: 20px;
   }
 
+  body {
+  margin: 0 17%;
+}
+h1 {
+  font-size: 50px;
+  font-family: "Gabarito", sans-serif;
+  font-weight: 700;
+  text-align: center;
+}
+
+h2 {
+  font-size: 38px;
+  color: rgb(98, 98, 98);
+  font-family: "Gabarito", sans-serif;
+  font-weight: 800;
+  text-align: center;
+  margin-top: 50px;
+}
+
+h3 {
+  font-size: 32px;
+  color: rgb(24, 24, 24);
+  font-family: "Gabarito", sans-serif;
+  font-weight: 700;
+  margin-top: 60px;
+}
+
+h4 {
+  font-size: 20px;
+  color: rgb(24, 24, 24);
+  font-family: "Gabarito", sans-serif;
+  font-weight: 600;
+  margin: 0 10px;
+}
+
+p {
+  color: rgb(55, 55, 55);
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+}
+
+hr {
+  border-color: rgb(218, 218, 218);
+  color: rgb(234, 234, 234);
+}
+
+/* color title text */
+.color-title-psp{
+  color: rgb(9, 99, 189);
+}
+
+.color-title-sands{
+  color:rgb(5, 5, 145);
+}
+
+.color-title-orbit{
+  color:rgb(101, 12, 227);
+}
+
+.color-title-toz{
+  color:rgb(235, 122, 27);
+}
+
+.color-title-dry{
+  color:rgb(211, 0, 0);
+}
+
+/* intro text */
+
+.intro-title {
+  font-weight: 700;
+  font-size: 50px;
+  text-align: left;
+  color: rgb(24, 24, 24);
+}
+
+.intro-subtitle {
+  font-weight: 400;
+  font-size: 25px;
+  text-align: left;
+  color: rgb(98, 98, 98);
+}
+
+.intro-section-title {
+  font-weight: 600;
+  color:rgb(24, 24, 24);
+  text-align: center;
+  font-size: 40px;
+}
+
+.project-subtitle {
+  font-size: 24px;
+  color: rgb(24, 24, 24);
+  text-align: center;
+  font-weight: 400;
+}
+
+.project-type-subtitle {
+  font-size: 18px;
+  color: rgb(98, 98, 98);
+  text-align: center;
+  font-weight: 400;
+}
+
+.about-intro-text {
+  font-size:24px;
+  font-weight:400;
+  color:rgb(24, 24, 24); 
+  text-align: left;
+}
+
+/* navigation menu */
+
+.menu-ul {
+  margin: 2em 0;
+  padding: 0;
+}
+
+.menu-ul a {
+  text-decoration: none;
+  padding: 0.5em 0.5em;
+  padding-left: 0;
+  margin: 1em 1em 1em 0;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 25px;
+}
+
+.menu-ul a:hover {
+  font-weight:900;
+}
+
+.menu-li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+/* navigation links */
+
+.menu-link {
+  color:rgb(24, 24, 24);
+}
+
+.menu-link:visited {
+  color:rgb(24, 24, 24);
+}
+
+/* lists */
+
+ul {
+  list-style-type:none;
+  list-style-position: outside;
+  padding: 0 0 0 30px;
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 2px;
+}
+
+ul li {
+  padding: 5px 0;
+}
+
+
+/* other links */
+
+a:link,
+a:visited {
+  color: rgb(24, 24, 24);
+}
+a:hover {
+  text-decoration: none;
+  color: rgb(24, 24, 24);
+}
+
+/* project box */
+
+.box {
+  border: 3px solid #353535;
+  border-radius: 5px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  text-align: left;
+  width: 90%;
+  margin: 20px 0;
+}
+
+.box:hover {
+  border: 3px solid #353535;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.box:hover.box-psp{
+  background-color: rgb(35, 255, 233);
+}
+
+.box:hover.box-sands{
+  background-color: rgb(245, 196, 0);
+}
+
+.box:hover.box-toz{
+  background-color: rgb(245, 139, 0);
+}
+
+.box:hover.box-orbit{
+  background-color: rgb(184, 0, 245);
+}
+
+.box:hover.box-matchbox{
+  background-color: rgb(0, 172, 158);
+}
+
+.box:hover.box-igni{
+  background-color: rgb(244, 4, 104);
+}
+
+.box:hover.box-df{
+  background-color: rgb(40, 255, 83);
+}
+
+.box:hover.box-drynoon{
+  background-color: rgb(246, 48, 48);
+}
+
+.box:hover.box-game{
+  background-color: rgb(115, 137, 231);
+}
+
+.box-text {
+  flex: 1;
+}
+
+.box-image {
+  float: right;
+  width: 30%;
+  margin-left: 10px;
+}
+
+.box-image img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.box-title {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  font-family: "Golos Text", sans-serif;
+  margin-top: 0;
+  padding-top: 0px;
+  color:rgb(24, 24, 24);
+}
+
+.box-subtitle {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Golos Text", sans-serif;
+  font-weight: 400;
+  padding-top: 0px;
+  color: #434343;
+  margin: 0 0 10px 0;
+}
+
+.box-paragraph {
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  color:rgb(55, 55, 55);
+}
+
+.box-link {
+  color:rgb(24, 24, 24);
+  text-decoration: none;
+}
+.box-link:visited{
+  color:rgb(24, 24, 24);
+  text-decoration: none;
+}
+
   .credits {
     font-family: "Apfel Grotezk", sans-serif;
     font-size: 3vw;
