--- a/main.css
+++ b/main.css
@@ -541,3 +541,14 @@ body {
   opacity: 1;
   text-align: left;
 }
+
+.button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
