--- a/main.css
+++ b/main.css
@@ -542,7 +542,7 @@ body {
   text-align: left;
 }
 
-.button {
+button {
   background-color: #04AA6D; /* Green */
   border: none;
   color: white;
