--- a/home.css
+++ b/home.css
@@ -32,6 +32,17 @@ html, body {
     overflow-x: hidden;
 }
 
+button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 /* Rectangle 1 */
 
 position: absolute;
