--- a/home.css
+++ b/home.css
@@ -33,7 +33,8 @@ html, body {
 }
 
 button {
-  background-color: #04AA6D; /* Green */
+   
+  background-color: #8ECAE6; /* Blue */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -41,6 +42,7 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 48px;
+    style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">
 }
 
 /* Rectangle 1 */
