--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,43 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 	position: sticky;
 	top: 0;
 }
+html {
+      scroll-behavior: smooth;
+    }
+
+  <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #8ECAE6;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
 
 /**
  * Display lists on a single line.
