--- a/css/home.css
+++ b/css/home.css
@@ -32,7 +32,7 @@ html {
   <title>Home</title>
   <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
 
-ul {
+.menu {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -43,13 +43,13 @@ ul {
   top: 0;
 }
 
-li {
+.menu li {
 display:inline;
   float: left;
 	
 }
 
-li a {
+.menu li a {
   display: block;
   color: white;
   text-align: center;
@@ -57,11 +57,11 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
+.menu li a:hover {
   background-color: #111;
 }
 
-active {
+.menu active {
   background-color: #4CAF50;
 }
 
