--- a/css/home.css
+++ b/css/home.css
@@ -37,6 +37,15 @@ menu li a {
 size: 40px;
 }
 
+menu a {
+  display: flex;
+  color: green;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+size: 40px;
+}
+
 menu li a: hover {
   background-color: #111;
 }
