--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@ sticky {
 }
 
 
-.menu ul {
+menu ul {
 	display: flex;
   list-style-type: none;
   margin: 0;
@@ -25,7 +25,7 @@ sticky {
 
 }
 
-menu li {
+menu ul li {
 display: flex;
   float: left;
 	
