--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,8 @@ html {
       scroll-behavior: smooth;
 	max-width: 100%;
     overflow-x: hidden;
-	background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
+	background-color: white
+	background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
 
     }
 
