--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,62 @@ html {
 	top: 0;
 }
 
+.Menu {
+  width: 1440px;
+  height: 120px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  .Rectangle_1 {
+    width: 1440px;
+    height: 120px;
+    .Rectangle_1 {
+      width: 1440px;
+      height: 120px;
+      background: #8ecae6;
+    }
+    .Logo {
+      width: 101px;
+      height: 113px;
+      .Ellipse_4 {
+        width: 46px;
+        height: 98px;
+      }
+      .Rectangle_2 {
+        width: 61px;
+        height: 102px;
+      }
+    }
+  }
+  .About_Jade {
+    color: #000000;
+    font-family: Lilita One;
+    font-size: 40px;
+    font-weight: normal;
+  }
+  .Home {
+    color: #000000;
+    font-family: Lilita One;
+    font-size: 40px;
+    font-weight: normal;
+  }
+  .Projects {
+    color: #000000;
+    font-family: Lilita One;
+    font-size: 40px;
+    font-weight: normal;
+  }
+  .Creative_Outlets {
+    color: #000000;
+    font-family: Lilita One;
+    font-size: 40px;
+    font-weight: normal;
+  }
+  .Contact {
+    color: #000000;
+    font-family: Lilita One;
+    font-size: 40px;
+    font-weight: normal;
+  }
+}
 
 .menu ul {
 	display: flex;
