--- a/css/home.css
+++ b/css/home.css
@@ -14,6 +14,17 @@ html {
 	position: sticky;
 	top: 0;
 }
+body {
+  /* Define the gradient */
+  background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
+;
+  
+  /* Set the height to 100% to take the full view */
+  height: 100%;
+  
+  /* Set the margin to 0 to remove browser default margins */
+  margin: 0;
+}
 
 .Menu {
   height: 120px;
@@ -38,24 +49,74 @@ html {
         height: 102px;
       }
     }
-  }
+  
+  .Menu ul {
+	display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #8ECAE6;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+
+}
+.Menu li {
+display: flex;
+  float: left;
+  background-color: #8ECAE6;
+  font-family: Lilita One;
+	
+}
+
+.Menu li a {
+  display: flex;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+font-size: 40px;
+  font-weight: 400;
+}
+
+.Menu a {
+  display: flex;
+  color: green;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+size: 40px;
+}
+
+.Menu li a: hover {
+  background-color: #111;
+}
+
+.Menu active {
+  background-color: #4CAF50;
+}
+	
   .About_Jade {
     color: #000000;
     font-family: Lilita One;
     font-size: 40px;
     font-weight: normal;
+	  display: flex;
   }
   .Home {
     color: #000000;
     font-family: Lilita One;
     font-size: 40px;
     font-weight: normal;
+	  display: flex;
   }
   .Projects {
     color: #000000;
     font-family: Lilita One;
     font-size: 40px;
     font-weight: normal;
+	  display: flex;
   }
   .Creative_Outlets {
     color: #000000;
@@ -71,53 +132,7 @@ html {
   }
 }
 
-.menu ul {
-	display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #8ECAE6;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
 
-}
-.menu li {
-display: flex;
-  float: left;
-  background-color: #8ECAE6;
-  font-family: Lilita One;
-	
-}
-
-.menu li a {
-  display: flex;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-font-size: 40px;
-  font-weight: 400;
-}
-
-.menu a {
-  display: flex;
-  color: green;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-size: 40px;
-}
-
-.menu li a: hover {
-  background-color: #111;
-}
-
-.menu active {
-  background-color: #4CAF50;
-}
-	
 /* Home */
 
 position: relative;
