--- a/css/home.css
+++ b/css/home.css
@@ -7,13 +7,6 @@ html {
 	background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
 
     }
-
-.sticky {
-	
-	position: -webkit-sticky;
-	position: sticky;
-	top: 0;
-}
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
@@ -24,6 +17,17 @@ body {
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
+}
+
+nav {
+  border-bottom: 1px solid black;
+}
+
+.sticky {
+	
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 }
 
 .Menu {
