--- a/css/home.css
+++ b/css/home.css
@@ -7,21 +7,6 @@ html {
 	background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
 
     }
-body {
-  /* Define the gradient */
-  background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
-;
-  
-  /* Set the height to 100% to take the full view */
-  height: 100%;
-  
-  /* Set the margin to 0 to remove browser default margins */
-  margin: 0;
-}
-
-nav {
-  border-bottom: 1px solid black;
-}
 
 .sticky {
 	
@@ -40,21 +25,7 @@ nav {
       
       height: 120px;
       background: #8ecae6;
-    }
-    .Logo {
-      width: 101px;
-      height: 113px;
-      .Ellipse_4 {
-        width: 46px;
-        height: 98px;
-      }
-      .Rectangle_2 {
-        width: 61px;
-        height: 102px;
-      }
-    }
-  
-  .Menu ul {
+      ul {
 	display: flex;
   list-style-type: none;
   margin: 0;
@@ -65,16 +36,7 @@ nav {
   position: sticky;
   top: 0;
 
-}
-.Menu li {
-display: flex;
-  float: left;
-  background-color: #8ECAE6;
-  font-family: Lilita One;
-	
-}
-
-.Menu li a {
+li a {
   display: flex;
   color: black;
   text-align: center;
@@ -82,22 +44,16 @@ display: flex;
   text-decoration: none;
 font-size: 40px;
   font-weight: 400;
-}
-
-.Menu a {
+a {
   display: flex;
   color: green;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 size: 40px;
-}
-
-.Menu li a: hover {
+li a: hover {
   background-color: #111;
-}
-
-.Menu active {
+active {
   background-color: #4CAF50;
 }
 	
@@ -135,8 +91,21 @@ size: 40px;
     font-weight: normal;
   }
 }
-
-
+    .Logo {
+      width: 101px;
+      height: 113px;
+      .Ellipse_4 {
+        width: 46px;
+        height: 98px;
+      }
+      .Rectangle_2 {
+        width: 61px;
+        height: 102px;
+      }
+    }
+}}}
+  
+  
 /* Home */
 
 position: relative;
