--- a/css/home.css
+++ b/css/home.css
@@ -105,7 +105,12 @@ active {
     }
 }}}
   
-  
+  .lilita-one-regular {
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 /* Home */
 
 position: relative;
