--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,6 @@
 
 html {
-      scroll-behavior: smooth;
-	max-width: 100%;
-    overflow-x: hidden;
+      scroll-behavior: smooth; max-width: 100%; overflow-x: hidden;
 	/* Define the gradient */
   background-image: linear-gradient(180deg, #FFF1DD, transparent);
   
@@ -11,7 +9,7 @@ html {
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
-	@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
     }
 
