--- a/css/home.css
+++ b/css/home.css
@@ -9,6 +9,10 @@ html {
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
+	
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap" rel="stylesheet">
     }
 
 /* FONTS*/
