--- a/css/home.css
+++ b/css/home.css
@@ -60,7 +60,7 @@ background-color: #8ecae6;
 position: fixed;  
 left: 0;  
 right: 0; 
-	top:0
+top:0;
 z-index:10;
 height:100px;
 display: flex;  
