--- a/css/home.css
+++ b/css/home.css
@@ -111,7 +111,7 @@ header .dropdown .dropbtn {
 }
 
 a:hover, .dropdown:hover .dropbtn {
-    background-color: ##FFF1DD;
+    background-color: #219EBC;
     border-size: 80px 900px;
     border-radius: 80px 900px;
 }
